--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 	"scripts": {
 		"dev": "dotenv -- nodemon -e ts -x ts-node src/lib/telegram.ts",
 		"prettier": "prettier --single-quote --trailing-comma all --write 'src/**/*.ts'",
-		"build": "dotenv -- nodemon -e ts -x ts-node src/lib/telegram.ts"
+		"build": "tsc"
 	},
 	"dependencies": {
 		"puppeteer": "^21.1.1",
